# ix

./: .gitignore  pyproject.toml  requirements.txt  t.py
src/: __init__.py
src/api/asset/: __init__.py
src/bt/: strategy.py
src/core/: __init__.py  terminal.py
src/core/tech/: ma.py
src/db/: __init__.py  conn.py  models.py
src/db/raw/: __init__.py
src/ix/: __init__.py
src/ix/bt/: __init__.py
src/ix/bt/indicator/: __init__.py  atr.py  base.py  macd.py
src/ix/bt/signal/: __init__.py  base.py  ext.py
src/ix/bt/signal/OecdCli/: __init__.py
src/ix/bt/strategy/: base.py
src/ix/core/: __init__.py
src/ix/core/perf/: __init__-Home.py  __init__.py
src/ix/core/stat/: __init__.py  preprocess.py
src/ix/core/tech/: __init__.py  ma.py
src/ix/db/: __init__.py
src/ix/db/client/: __init__.py
src/ix/db/conn/: __init__.py
src/ix/db/models/: __init__.py
src/ix/db/raw/: __init__.py
src/ix/misc/: __init__.py  env.py  fmt.py
